--- a/expr/sarithexpr/dune-project
+++ b/expr/sarithexpr/dune-project
@@ -1,6 +1,6 @@
 (lang dune 3.16)
 
-(name arithexpr)
+(name sarithexpr)
 
 (generate_opam_files true)
 
@@ -16,7 +16,7 @@
 (documentation https://url/to/documentation)
 
 (package
- (name arithexpr)
+ (name sarithexpr)
  (synopsis "A short synopsis")
  (description "A longer description")
  (depends ocaml dune)
